injiweb-1605 fixed with the Stringutils
Signed-off-by: Gurpreet41082 <gurpreet.kaur@thoughtworks.com>